# geant

./: .gitignore
knucl4.10/: .rootlogon.C  CMakeLists.txt  CS.list  K3He.C  Makefile.lib  README  ReacID_735.list  acc2_pipipnL.C  acc_piSpn.C  acc_piSpnq.C  ana_pippimnL.C  asaMEMO  checkGenSim.C  checkGenSim2.C  dump.mac  k3He_k0_ds.list  knucl.cc  make.sh  nc_cal_plot.C  nophys.mac  pdg_table.txt  piLpn.C  pippimnL.C  plotCSK0.C  plotGenSim.C  run.mac  vrml.mac
knucl4.10/KnuclSettingCard_inoue/: KnuclSetting.card  kd_all.card  kd_all_FWD.card  kd_all_woDora.card  kd_all_woK0_Sf.card  kd_all_woK0_Sf_woDora.card  kd_k0n_ns.card  kd_k0n_ns_offshell.card  kd_k0n_ns_woDora.card  kd_k0n_ts.card  kd_k0n_ts_woDora.card  kd_kn_pimSp.card  kd_kn_pimSp_offshell.card  kd_kn_pimSp_onshell.card  kd_kn_pipSm.card  kd_kn_pipSm_offshell.card  kd_kn_pipSm_onshell.card  kd_kp.card  kd_kp_pimL.card  kd_kp_pimL_iso.card  kd_kp_pimL_offshell.card  kd_kp_pimL_onshell.card  kd_kp_pimS0.card  kd_kp_pimS0_iso.card  kd_kp_pimS0_offshell.card  kd_kp_pimS0_onshell.card  kd_nL1405.card  kd_nSmpip.card  kd_n_Sp_pim.card  kd_pLpim.card  kd_pS1385.card  kd_pS1385_iso.card  kd_pS1385_woDora.card  kd_pimL_ps.card  kd_pimSp_ns.card  kd_pimSp_ns_offshell.card  kd_pimSp_ns_woDora.card  kd_pipSm_ns.card  kd_pipSm_ns_offshell.card  kd_pipSm_ns_woDora.card  (+5 more)
knucl4.10/include/: ComCardsInput.hh  DetectorList.hh  KnuclAnaManager.hh  KnuclAnalyzeData.h  KnuclChamberSD.hh  KnuclChamberSD_orig.hh  KnuclCommon.h  KnuclCounterSD.hh  KnuclDetectorConstruction.hh  KnuclEventAction.hh  KnuclFieldSetup.hh  KnuclFieldSetup_combi.hh  KnuclFieldSetup_dora.hh  KnuclFieldSetup_uswk.hh  KnuclHist.hh  KnuclHit.hh  KnuclMaterialManager.hh  KnuclPrimaryGeneratorAction.hh  KnuclRootData.h  KnuclRunAction.hh  KnuclSteppingAction.hh  KnuclTrackingAction.hh  KnuclTrajectory.hh  KnuclTrajectoryPoint.hh  KnuclTrigger.hh  KnuclVisManager.hh  LinkDef.h
knucl4.10/mac_inoue/: L1405_pimSp.mac  L1405_pipSm.mac  S1385_pimL.mac  S1385_pimL_nophys.mac  S1385_pimL_run1000.mac  S1385_pimS0.mac  S1385_pimS0_nophys.mac  S1385_pimS0_run1000.mac  el.mac  neutron_no_reaction.mac  run_100.mac  run_100k.mac  run_10k.mac  run_1k.mac  test.mac
knucl4.10/src/: BLDCWireMap_v35.param  ComCardsInput.cc  DetectorList.cc  G4PhaseSpaceDecayChannel.cc  KnuclAnaManager.cc  KnuclChamberSD.cc  KnuclChamberSD.cc_org  KnuclDetectorConstruction.cc  KnuclDetectorConstruction.cc_orig  KnuclEventAction.cc  KnuclFieldSetup_combi.cc  KnuclFieldSetup_dora.cc  KnuclFieldSetup_uswk.cc  KnuclHist.cc  KnuclMaterialManager.cc  KnuclMaterials.icc  KnuclPrimaryGeneratorAction.cc  KnuclRootData.cc  KnuclRunAction.cc  KnuclSteppingAction.cc  KnuclTrajectory.cc  KnuclTrigger.cc  KnuclVisManager.cc  primarydiff
knucl4.10/src_inoue/: ComCardsInput.cc  ComCrossSectionTable.cc  G4PhaseSpaceDecayChannel.cc.orig  KnuclAnaManager.cc  KnuclCounterSD.cc  KnuclDetectorConstruction.cc  KnuclEventAction.cc  KnuclFieldSetup.cc  KnuclHist.cc  KnuclHit.cc  KnuclMaterials.icc  KnuclPrimaryGeneratorAction.cc  KnuclProcess.cc  KnuclRootData.cc  KnuclRunAction.cc  KnuclSteppingAction.cc  KnuclTools.cc  KnuclTrackingAction.cc  KnuclTrajectory.cc  KnuclTrigger.cc  KnuclTrigger.cc~
